<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg_color_app"
    android:orientation="vertical"
    android:padding="15dp" >

    <EditText
        android:id="@+id/register_et_email"
        style="@style/Register_EditText"
        android:layout_marginTop="15dp"
        android:hint="@string/login_input_email" />

    <EditText
        android:id="@+id/register_et_passwords"
        style="@style/Register_EditText"
        android:hint="@string/login_input_password" />

    <EditText
        android:id="@+id/register_et_passwords_again"
        style="@style/Register_EditText"
        android:hint="@string/login_input_password_again" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/register_et_verify_code"
            style="@style/Register_EditText"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="2"
            android:hint="@string/login_input_verify_code" />

        <ImageView
            android:id="@+id/register_iv_verify_code"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:scaleType="fitXY" />
    </LinearLayout>

    <Button
        android:id="@+id/register_btn_register"
        style="@style/Register_Button"
        android:text="@string/login_register" />

</LinearLayout>