<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg_color_app"
    android:orientation="vertical"
    android:padding="@dimen/screen_margin_default" >

    <EditText
        android:id="@+id/reset_password_et_email"
        style="@style/Register_EditText"
        android:layout_marginTop="@dimen/screen_margin_default"
        android:hint="@string/login_input_email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_10"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/reset_password_et_verify_code"
            style="@style/Register_EditText"
            android:layout_width="0dp"
            android:layout_marginRight="@dimen/margin_padding_10"
            android:layout_marginTop="0dp"
            android:layout_weight="2"
            android:hint="@string/login_input_verify_code" />

        <ImageView
            android:id="@+id/reset_password_iv_verify_code"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_et_height_default"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:scaleType="fitXY" />
    </LinearLayout>

    <Button
        android:id="@+id/reset_password_btn_send"
        style="@style/Register_Button"
        android:text="@string/send" />

</LinearLayout>