<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg_color_app"
    android:padding="@dimen/screen_margin_default" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ui_bg_color_app"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/withdrawals_et_account"
            style="@style/Register_EditText"
            android:layout_marginTop="@dimen/margin_padding_15"
            android:enabled="false"
            android:background="@drawable/shape_frame_white_dfdfdf_4"
            android:hint="@string/money_auth_input_account_hint"
            android:textColor="@color/debar_text_color"
            android:visibility="gone" />

        <EditText
            android:id="@+id/withdrawals_et_amount"
            style="@style/Register_EditText"
            android:layout_marginTop="@dimen/margin_padding_15"
            android:inputType="number"
            android:digits="0123456789."
            android:hint="@string/money_max_amount_hint" />

        <Button
            android:id="@+id/withdrawals_btn_confirm"
            style="@style/Register_Button"
            android:text="@string/money_withdrawals_confirm"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/money_withdrawals_reminder"
        android:textColor="@color/label_text_color"
        android:textSize="@dimen/text_size_12" />

</RelativeLayout>