<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg_color_nut"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/mey_address_rl_store_pickup"
        style="@style/setting_lay_item"
        android:layout_marginTop="@dimen/margin_padding_10"
        android:visibility="gone" >

        <TextView
            style="@style/setting_lay_text_title"
            android:text="@string/address_store_pickup" />

        <TextView
            style="@style/setting_lay_text_content"
            android:text="@string/address_free_postage" />
    </RelativeLayout>

    <ListView
        android:id="@+id/my_address_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null" >
    </ListView>

    <TextView
        android:id="@+id/my_address_tv_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_100"
        android:gravity="center"
        android:text="@string/address_error_data_null"
        android:textColor="@color/label_text_color"
        android:textSize="@dimen/text_size_14"
        android:visibility="gone" />

</LinearLayout>